--- a/home.html
+++ b/home.html
@@ -15,9 +15,9 @@
   <body>
 
     <!--meni-->
-    <nav class="navbar navbar-dark navbar-fixed-top" style="background-color: #80aaff;">
+    <nav class="navbar navbar-dark navbar-fixed-top" style="background-color: #2E4677;">
       <a class="navbar-brand" href="home.html">
-    <img src="logo.jpg" alt="logo" style="width:50px;">
+    <img src="logo.png" alt="logo" style="width:70px;">
     </a>
   <button id="tog" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -25,10 +25,13 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" style="color: white; font-size: 20px;" href="domaca.html">Igraj!</a>
+        <a class="nav-link" style="color: white; font-size: 20px;" href="domaca.html">Log In</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="navodila" style="color: white; font-size: 20px;" href="navodila.html">Navodila za igro</a>
+        <a class="nav-link" id="navodila" style="color: white; font-size: 20px;" href="navodila.html">Sign up</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="navodila" style="color: white; font-size: 20px;" href="navodila.html">My profile</a>
       </li>
     </ul>
   </div>
