--- a/profile.html
+++ b/profile.html
@@ -25,13 +25,13 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" style="color: white; font-size: 20px;" href="domaca.html">Log In</a>
+        <a class="nav-link" style="color: white; font-size: 20px;" href="login.html">Log In</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="navodila" style="color: white; font-size: 20px;" href="navodila.html">Sign up</a>
+        <a class="nav-link" id="navodila" style="color: white; font-size: 20px;" href="signup.html">Sign up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="navodila" style="color: white; font-size: 20px;" href="navodila.html">My profile</a>
+        <a class="nav-link" id="navodila" style="color: white; font-size: 20px;" href="profile.html">My profile</a>
       </li>
     </ul>
   </div>
