--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 
 <html lang="sl-SI">
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="sustyle.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, user-scaleable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Home</title>
 
@@ -37,7 +37,29 @@
   </div>
 </nav>
 <br>
-   
+<!--signup form-->
+<div class="stran">
+  <div id="kvadrat">
+    <div id="okvir">
+  <h3 id="naslov">Log In</h3>
+  <a class="nav-link" style="color: white; font-size: 20px; text-align: center;" href="signup.html">Sign Up</a>
+  
+
+  <div class="mreza">
+    <form>
+        
+        <label for="email">Email:</label><br>
+        <input type="email"id="email" name="email"><br>
+        <label for="pwd">Geslo:</label><br>
+        <input type="password" id="pwd" name="pwd"><br>
+        <div id="submitreset">
+        <input type="Submit" value="Log in">
+        </div>
+        </form>
+  </div>
+  </div>
+  </div>
+  </div>
    
 
     
